--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   gap: ^3.0.1
   sqflite: ^2.4.2
   flutter_svg: ^2.2.1
+  flutter_bloc: ^9.1.1
+  equatable: ^2.0.7
 dev_dependencies:
   flutter_test:
     sdk: flutter
